--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       crossorigin="anonymous"
     ></script>
     <!--* adding css  *-->
-    <link rel="stylesheet" href="Media/style.css" />
+    <link type="text/css" rel="stylesheet" href="Media/style.css" />
     </head>
     <body>
     <!--* header section begins *-->
@@ -24,7 +24,7 @@
           <div class="logo">
             <!--* logo of Music player *-->
             <img
-              src="media/music-player-logo.png"
+              src="Media/music-player-logo.png"
               alt="music-player-logo.png"
             />
           </div>
@@ -175,7 +175,7 @@
       <!--* Player section Starts Here *-->
       <!-- <div class="bottom"> -->
         <div class="song-image">
-          <img src="media/song-image.webp" alt="song-image" />
+          <img src="Media/song-image.webp" alt="song-image" />
         </div>
         <div class="song-name">
           <b>Manjha</b>
