--- a/Playlist_Page.html
+++ b/Playlist_Page.html
@@ -25,7 +25,7 @@
           <div class="logo">
             <!--* logo of Music player *-->
             <img
-              src="media/music-player-logo.png"
+              src="Media/music-player-logo.png"
               alt="music-player-logo.png"
             />
           </div>
@@ -137,7 +137,7 @@
     <footer class="Music-Player">
     <!--* Player section  *-->
         <div class="song-image">
-          <img src="media/song-image.webp" alt="song-image" />
+          <img src="Media/song-image.webp" alt="song-image" />
         </div>
         <div class="song-name">
           <b>Manjha</b>
