--- a/Single_Playlist.html
+++ b/Single_Playlist.html
@@ -25,7 +25,7 @@
           <div class="logo">
             <!--* logo of Music player *-->
             <img
-              src="media/music-player-logo.png"
+              src="Media/music-player-logo.png"
               alt="music-player-logo.png"
             />
           </div>
@@ -183,7 +183,7 @@
   <!--* Player section Start Here *-->
     <section class="Music-Player">
         <div class="song-image">
-          <img src="media/song-image.webp" alt="song-image" />
+          <img src="Media/song-image.webp" alt="song-image" />
         </div>
         <div class="song-name">
           <b>Manjha</b>
